--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-logging.level.root=DEBUG
-logging.level.org.springframework=DEBUG
+spring.data.mongodb.host=${MONGODB_SERVICE_HOST}
+spring.data.mongodb.port=${MONGODB_SERVICE_PORT}
+spring.data.mongodb.username=${MONGODB_USERNAME}
+spring.data.mongodb.password=${MONGODB_PASSWORD}
+spring.data.mongodb.database=${MONGODB_DATABASE}
