--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.data.mongodb.port=${MONGODB_SERVICE_PORT}
 spring.data.mongodb.username=${MONGODB_USERNAME}
 spring.data.mongodb.password=${MONGODB_PASSWORD}
 spring.data.mongodb.database=${MONGODB_DATABASE}
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://${MARIADB_SERVICE_HOST}:${MARIADB_SERVICE_PORT}/${MARIADB_DATABASE}
+spring.datasource.username=${MARIADB_USERNAME}
+spring.datasource.password=${MARIADB_PASSWORD}
